# tofi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  meson.build  meson_options.txt  vgcore.651870.REMOVED.git-id
.github/workflows/: build-test.yml
completions/: greetd-mini-wl-greeter  tofi
doc/: config  greetd-mini-wl-greeter.1.scd  scd2gfm.sh  tofi.1.md  tofi.1.scd  tofi.5.md  tofi.5.scd
shaders/: frag.frag  vert.vert
src/: background.c  client.c  client.h  clipboard.c  clipboard.h  color.c  color.h  compgen.c  compgen.h  config.c  config.h  desktop_vec.c  desktop_vec.h  drun.c  drun.h  egl.c  egl.h  entry.c  entry.h  fuzzy_match.c  fuzzy_match.h  gl.c  gl.h  greetd.c  greetd.h  history.c  history.h  icon.c  icon.h  image.c  image.h  input.c  input.h  ipc.c  ipc.h  lock.c  lock.h  log.c  log.h  main.c  (+28 more)
src/entry_backend/: harfbuzz.c  harfbuzz.h  pango.c  pango.h
test/: config.c  meson.build  tap.c  tap.h  utf8.c
themes/: dark-gruvbox  dark-paper  dmenu  dos  fullscreen  minimal_dmenu  rofi  soy-milk
